# parallel-vertex-clustering

./: .gitignore  .gitmodules  CMakeLists.txt  PWeldCuda.cu  README.md
cpp/: PWeldCuNSearch.cu  PWeldCuda.cu  TriangleMesh.cpp  TriangleMeshPWeld.cpp  neighbor_list.cu  neighbor_list.cuh
csv/: Pweld_times.csv  sweld_times.csv
include/: Timer.hpp
include/geometry/: PWeldCuda.h  TriangleMesh.h  TriangleMeshPWeld.h
nima_dat/bunny/P-Weld/csv/: all_data.csv
nima_dat/csv/: all_data.csv
scripts/: PWeldCuda.cu  convert-to-ply.py  extract.py  extract_all_times.py  run_data_logs.sh
src/: CMakeLists.txt  find-eps.cpp  main.cpp
test/: PWeldCuda.cu
